--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "igdb-api-node": "^4.0.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
     "node-fetch": "^2.6.0",
     "pg": "^8.3.0"
   },
