--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "igdb-api-node": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1"
   },
